Staattiset nettisivut suunniteltu, sql taulut tehty

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -2,10 +2,12 @@
 
 {% block content %}
   <div class="page-header">
-    <h1>Tervetuloa Tsoha Bootstrappiin!</h1>
+    <h1>Tervetuloa käyttämään Muistilistaa!</h1>
+    <p>Kirjautumalla sisään voit alkaa pitämään kirjaa askareistasi.
+        Voit luokitella niitä ja antaa niille tärkeysasteen.</p>
   </div>
 
   <p>
-    <a href="http://tsoha.github.io" class="btn btn-primary btn-lg">Tutustu materiaaliin <span class="glyphicon glyphicon-chevron-right"></span></a>
+    <a href="http://chgr.users.cs.helsinki.fi/tsoha/" class="btn btn-primary btn-lg">Kirjaudu sisään <span class="glyphicon glyphicon-chevron-right"></span></a>
   </p>
 {% endblock %}
