--- a/app/views/base.html
+++ b/app/views/base.html
@@ -33,7 +33,7 @@
             <span class="icon-bar"></span>
           </button>
           <!-- Sovelluksen nimi -->
-          <a class="navbar-brand" href="{{base_path}}">Muistilista</a>
+          <a class="navbar-brand" href="{{base_path}}/muistilista">Muistilista</a>
         </div>
 
         <div class="collapse navbar-collapse" id="navigation">
