--- a/app/views/home.html
+++ b/app/views/home.html
@@ -8,6 +8,6 @@
   </div>
 
   <p>
-    <a href="http://chgr.users.cs.helsinki.fi/tsoha/muistilista" class="btn btn-primary btn-lg">Kirjaudu sisään <span class="glyphicon glyphicon-chevron-right"></span></a>
+    <a href="http://chgr.users.cs.helsinki.fi/tsoha/kirjautuminen" class="btn btn-primary btn-lg">Kirjaudu sisään <span class="glyphicon glyphicon-chevron-right"></span></a>
   </p>
 {% endblock %}
