--- a/app/views/chore/chore_edit.html
+++ b/app/views/chore/chore_edit.html
@@ -1,29 +1,39 @@
 {% extends "base.html" %}
 {% block content %}
-  <h1>Muokkaa askaretta Pyykit</h1>
+{% import "macros/forms.html" as forms %}
+  <h1>Muokkaa askaretta </h1>
+  
+  {% if errors %}
+  <div class="alert alert-danger">
+      <ul>
+          {% for error in errors %}
+          <li>{{error}}</li>
+          {% endfor %}
+      </ul>
+  </div>
+  {% endif %}
 
-  <form>
-    <div class="checkbox">
-      <label>
-        <input type="checkbox">
-        Tärkeä
-      </label>
-    </div>
+  
+  <form method="post" action="{{base_path}}/askare/{{attributes.id}}/muokkaus">
     <div class="form-group">
-      <label>Askare</label>
-      <input type="text" class="form-control" value="Pyykit">
+      <label class="control-label">Askare</label>
+      <input type="text" name="name" class="form-control" value="{{attributes.name}}">
     </div>
+
     <div class="form-group">
-      <label>Luokka</label>
-      <input type="text" class="form-control" value="Pyykit">
+      <input type="hidden" name="person_id" value={{user_logged_in.id}}>
     </div>
+
     <div class="form-group">
-      <label>Lisätietoja</label>
-      <textarea class="form-control">        Muista sulkea vesihana lopuksi!
-      </textarea>
+       <input type="hidden" name ="urgent" value =FALSE> 
+      <input type="checkbox" name="urgent" value=TRUE > Tärkeä?
+      
     </div>
+
     <div class="form-group">
-      <button type="submit" class="btn btn-primary">Tallenna</button>
-    </div>
+      <button type="submit" class="btn btn-primary">Lisää</button> 
   </form>
+      {{forms.poista_nappi("#{base_path}/askare/#{chore.id}/poista")}}
+    </div>
+ 
 {% endblock %}
