--- a/app/views/chore/new.html
+++ b/app/views/chore/new.html
@@ -1,15 +1,25 @@
 {% extends "base.html" %}
 {% block content %}
   <h1>Lisää askare muistilistaasi</h1>
+  
+  {% if errors %}
+  <div class="alert alert-danger">
+      <ul>
+          {% for error in errors %}
+          <li>{{error}}</li>
+          {% endfor %}
+      </ul>
+  </div>
+  {% endif %}
 
   <form method="post" action="{{base_path}}/askare">
     <div class="form-group">
-      <label>Askare</label>
-      <input type="text" name="name" class="form-control">
+      <label class="control-label">Askare</label>
+      <input type="text" name="name" class="form-control" value="{{attributes.name}}">
     </div>
 
     <div class="form-group">
-      <input type="hidden" name="person_id" value=1>
+      <input type="hidden" name="person_id" value={{user_logged_in.id}}>
     </div>
 
     <div class="form-group">
