--- a/app/views/person/login.html
+++ b/app/views/person/login.html
@@ -1,19 +1,22 @@
 {% extends "base.html" %}
 {% block content %}
+{% if error%}
+  <div class="alert alert-danger">
+  {{error}}
+</div>
+{% endif %}
+  
   <h1>Kirjaudu sisään</h1>
 
-  <!-- Kaikki lomakkeen elementit form-tagin sisään -->
-  <form>
-    <!-- Tekstikenttä käyttäjätunnukselle -->
+  <form method="post" action="{{base_path}}/kirjautuminen">
     <div class="form-group">
       <label>Käyttäjätunnus</label>
-      <input type="text" class="form-control">
+      <input type="text" class="form-control" name="käyttäjätunnus" value="{{käyttäjätunnus}}">
     </div>
 
-    <!-- Salasanakenttä salasanalle -->
     <div class="form-group">
       <label>Salasana</label>
-      <input type="password" class="form-control">
+      <input type="password" class="form-control" name="salasana">
     </div>
 
     <button type="submit" class="btn btn-primary">Kirjaudu sisään</button>
