DL5 palautus: luokka-tietokanta otettu käyttöön, dokumentointia

--- a/app/views/person/login.html
+++ b/app/views/person/login.html
@@ -5,6 +5,12 @@
   {{error}}
 </div>
 {% endif %}
+{% if message %}
+<div class="alert alert-success">
+    {{message}}
+</div>
+{% endif %}
+
   
   <h1>Kirjaudu sisään</h1>
 
