--- a/app/views/base.html
+++ b/app/views/base.html
@@ -40,7 +40,17 @@
           <ul class="nav navbar-nav">
             <!-- Navigaation linkit -->
             <li><a href="{{base_path}}">Etusivu</a></li>
+            <li><a href="{{base_path}}/luokat">Luokat</a></li>
           </ul>
+                  {% if user_logged_in %}
+        <form class="navbar-form navbar-right" method="post" action="{{base_path}}/uloskirjautuminen">
+          <button type="submit" class="btn btn-default">Kirjaudu ulos</button>
+        </form>
+      {% else %}
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="{{base_path}}/kirjautuminen">Kirjaudu sisään</a></li>
+        </ul>
+      {% endif %}
         </div>
       </div>
     </nav>
