--- a/app/views/chore/chore_list.html
+++ b/app/views/chore/chore_list.html
@@ -5,7 +5,7 @@
   {{message}}
 </div>
 {% if user_logged_in %}
-<h1>Käyttäjän {{user_logged_in.name}} pelikirjasto</h1>
+<h1>Käyttäjän {{user_logged_in.name}} muistilista</h1>
 {% endif %}
 
 
@@ -13,6 +13,8 @@
 
   <p>
     <a href="{{base_path}}/askare/uusi" class="btn btn-success">Lisää askare</a>
+  
+    <a href="{{base_path}}/luokat" class="btn btn-default">Hallinnoi luokkia</a>
   </p>
 
   <table class="table table-striped table-bordered">
