Viimeinen palautus: Koodi viimeistelty, dokumentaatio valmis

--- a/app/views/chore/chore_edit.html
+++ b/app/views/chore/chore_edit.html
@@ -1,39 +1,51 @@
 {% extends "base.html" %}
 {% block content %}
 {% import "macros/forms.html" as forms %}
-  <h1>Muokkaa askaretta </h1>
-  
-  {% if errors %}
-  <div class="alert alert-danger">
-      <ul>
-          {% for error in errors %}
-          <li>{{error}}</li>
-          {% endfor %}
-      </ul>
-  </div>
-  {% endif %}
+<h1>Muokkaa askaretta </h1>
 
-  
-  <form method="post" action="{{base_path}}/askare/{{attributes.id}}/muokkaus">
+{% if errors %}
+<div class="alert alert-danger">
+    <ul>
+        {% for error in errors %}
+        <li>{{error}}</li>
+        {% endfor %}
+    </ul>
+</div>
+{% endif %}
+
+
+<form method="post" action="{{base_path}}/askare/{{attributes.id}}/muokkaus">
     <div class="form-group">
-      <label class="control-label">Askare</label>
-      <input type="text" name="name" class="form-control" value="{{attributes.name}}">
+        <label class="control-label">Askare</label>
+        <input type="text" name="name" class="form-control" value="{{attributes.name}}">
     </div>
 
     <div class="form-group">
-      <input type="hidden" name="person_id" value={{user_logged_in.id}}>
+        <input type="hidden" name="person_id" value={{user_logged_in.id}}>
+    </div>
+
+    <input type="hidden" name="categories" value=0>
+
+
+    <div class="form-group">
+        <label>Luokat (Ctrl-painettuna useampi)</label>
+        <select class="form-control" name="categories[]" multiple="">
+            {% for category in categories %}
+            <option value="{{category.id}}">{{category.name}}</option>
+            {% endfor %}
+        </select>
     </div>
 
     <div class="form-group">
-       <input type="hidden" name ="urgent" value =FALSE> 
-      <input type="checkbox" name="urgent" value=TRUE > Tärkeä?
-      
+        <input type="hidden" name ="urgent" value =FALSE> 
+        <input type="checkbox" name="urgent" value=TRUE > Tärkeä?
+
     </div>
 
     <div class="form-group">
-      <button type="submit" class="btn btn-primary">Lisää</button> 
-  </form>
-      {{forms.poista_nappi("#{base_path}/askare/#{chore.id}/poista")}}
-    </div>
- 
+        <button type="submit" class="btn btn-primary">Lisää</button> 
+</form>
+{{forms.poista_nappi("#{base_path}/askare/#{chore.id}/poista")}}
+</div>
+
 {% endblock %}
