--- a/app/views/category/category_list.html
+++ b/app/views/category/category_list.html
@@ -1,9 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
 {% import "macros/forms.html" as forms %}
+{% if message %}
 <div class="alert alert-success">
-  {{message}}
+    {{message}}
 </div>
+{% endif %}
 {% if user_logged_in %}
 <h1>Käyttäjän {{user_logged_in.name}} luokat</h1>
 {% endif %}
