--- a/app/views/category/category_show.html
+++ b/app/views/category/category_show.html
@@ -1,9 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
 {% import "macros/forms.html" as forms %}
+{% if message %}
 <div class="alert alert-success">
-  {{message}}
+    {{message}}
 </div>
+{% endif %}
 <h1>{{category.name}}</h1>
 <ul>
 
